# BrazilianSanctionsMCPserver

./: .env example  .gitignore  BrazillianSanctions.json  LICENSE  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt  sanctions_search.py
