[project]
name = "braziliansanctionsmcpserver"
version = "0.1.0"
description = "An MCP server that provides access to Brazilian sanctions databases through the Porta da Transparência API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]
